compiler/testData/diagnostics/tests/multiplatform/topLevelFun/implWithoutHeader.kt
// FIR_IDENTICAL
// MODULE: m1-jvm
// FILE: jvm.kt

actual fun <!ACTUAL_WITHOUT_EXPECT!>foo<!>() { }
